[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-ab"
version = "0.1.0"
description = "A/B testing framework for LLM agent prompts and strategies: win rates, statistical significance, champion/challenger routing"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["llm", "agents", "ab-testing", "experimentation", "prompts", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/darshjme/agent-ab"
Repository = "https://github.com/darshjme/agent-ab"

[tool.setuptools.packages.find]
where = ["src"]
